# geosardine

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  build.ps1  doc  doc.ps1  environment.yml  pyproject.toml  tes.ipynb  tes.tif
.github/workflows/: python-package.yml
conda.recipe/: bld.bat  build.sh  meta.yaml
docs/: CNAME  index.html  index.js  raster.html
docs/interpolate/: index.html
geosardine/: __init__.py  __main__.py  _geosardine.py  _raster_numba.py  _utility.py  main.py  raster.py
geosardine/interpolate/: __init__.py  _utility.py  idw.py
sardine/: __init__.py  _sardine.py
template/: config.mako  html.mako
tests/: test_geosardine.py  test_geosardine_interpolate.py  test_geosardine_raster.py  test_sardine.py
tests/idw/: test_idw_array.npy  test_idw_file.geojson  test_idw_file.tif  test_idw_file.tif.aux.xml  test_idw_file_8327.geojson  test_idw_file_array.npy  test_idw_val.npy  test_idw_xy.npy
