[tool.poetry]
name = "geosardine"
version = "0.5.0"
license = "BSD-3-Clause"
description = "Spatial operations extend fiona and rasterio"
authors = ["Sahit Tuntas Sadono <26474008+sahitono@users.noreply.github.com>"]
homepage = "https://github.com/sahitono/geosardine"
repository = "https://github.com/sahitono/geosardine"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: BSD License",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18"
gdal = "^3.1.2"
rasterio = "^1.1.5"
fiona = "^1.8.17"
affine = "^2.3.0"
shapely = ">=1.6.4"
tqdm = "^4.48.2"
numba = "^0.51.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.5.3"
poetry_dev = "^0.1.2"

[tool.poetry.scripts]
dine = 'geosardine.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
