[tool.poetry]
name = "geosardine"
version = "0.9.0"
license = "BSD-3-Clause"
description = "Spatial operations extend fiona and rasterio"
authors = ["Sahit Tuntas Sadono <26474008+sahitono@users.noreply.github.com>"]
homepage = "https://github.com/sahitono/geosardine"
repository = "https://github.com/sahitono/geosardine"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: BSD License",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
affine = "^2.3.0"
shapely = ">=1.6.4"
tqdm = "^4.48.2"
numba = "^0.51.2"
click = "^7.1.2"
pip = ">=20.0.0"
gdal = ">=3.0.4,<3.2.0"
fiona = "^1.8.13"
rasterio = "^1.1.2"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.5.3"
coverage = "^5.3"
pytest-cov = "^2.10.1"
mypy = "^0.790"

[tool.poetry.scripts]
dine = 'geosardine.__main__:main'

[tool.pytest.ini_options]
filterwarnings = [
    "error::UserWarning",
]

[build-system]
requires = ["poetry>=1.0.3", "pip>=20.0.0"]
build-backend = "poetry.masonry.api"
