[tool.poetry]
name = "geosardine"
version = "0.13.1"
license = "BSD-3-Clause"
description = "Spatial operations extend fiona and rasterio"
authors = ["Sahit Tuntas Sadono <26474008+sahitono@users.noreply.github.com>"]
homepage = "https://github.com/sahitono/geosardine"
repository = "https://github.com/sahitono/geosardine"
readme = "README.md"
include = ["CHANGELOG.md"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: BSD License",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = ">=1.18"
affine = "^2.3.0"
shapely = ">=1.6.4,<2.0.0"
tqdm = ">=4.48.2,<5.0.0"
numba = ">=0.51.2"
click = "^7.1.2"
gdal = ">=3.0.4"
fiona = ">=1.8.13"
rasterio = ">=1.1.2"
opencv-python = ">=4.4.0,<=5.0.0"
pyproj = ">=2.6.1"
# pyproj = { path="../../../.pypkg/pyproj-3.1.0-cp38-cp38-win_amd64.whl" }

[tool.poetry.dev-dependencies]
# gdal = { path="../../../.pypkg/GDAL-3.3.0-cp38-cp38-win_amd64.whl" }
# fiona = { path="../../../.pypkg/Fiona-1.8.20-cp38-cp38-win_amd64.whl" }
# rasterio = { path="../../../.pypkg/rasterio-1.2.6-cp38-cp38-win_amd64.whl" }
pip = ">=20.0.0"
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.5.3"
coverage = "^5.3"
pytest-cov = "^2.10.1"
mypy = "^0.790"
pdoc3 = "^0.9.2"

[tool.poetry.scripts]
dine = 'geosardine.__main__:main'

[tool.pytest.ini_options]
filterwarnings = ["error::UserWarning"]

[build-system]
requires = ["poetry>=1.0.3", "pip>=20.0.0"]
build-backend = "poetry.masonry.api"
